--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #container{
     
-    width:90vw;
-    height:95vh;
+    width:500px;
+    height:536px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     margin:auto;
     background-color: black;
@@ -53,7 +53,7 @@ body{
 #canvas{
     position:relative;
     display:block;
-    width:100%;
+
 }
 
 
