--- a/style.css
+++ b/style.css
@@ -56,5 +56,21 @@ body{
 
 }
 
+label {
+    color: aliceblue;
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+#mode_form {
+    display: flex;
+    margin-left: 10px;
+}
+
+input {
+    height: 20px;
+    width: 20px;
+}
+
 
 
